# upsilonconf

./: .buildinfo  LICENSE  README.md  about.html  api.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  usage.html
.github/workflows/: ci.yml  publish.yml  sphinx.yml
_modules/: index.html
_modules/upsilonconf/: config.html  io.html
_modules/upsilonconf/io/: base.html  directory.html  json.html  toml.html  yaml.html
_sources/: about.rst.txt  index.rst.txt
_static/: alabaster.css
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/_templates/autosummary/: class.rst
tests/: test__utils.py  test_cli.py  test_config.py  test_hidden.py  test_io.py  test_io_legacy.py  test_persistence.py  test_typed_config.py  test_utils.py
tests/test_io/: test_base.py  test_cli.py  test_directory.py  test_json.py  test_toml.py  test_yaml.py
upsilonconf/: __init__.py  _import_tricks.py  _optional_dependency.py  _utils.py  _yaml.py  base.py  cli.py  config.py  errors.py  io.py  stamp.py
upsilonconf/io/: __init__.py  _optional_dependencies.py  base.py  cli.py  directory.py  json.py  toml.py  yaml.py
upsilonconf/persistence/: __init__.py  _yaml.py
upsilonconf/serialisation/: persistence.py
upsilonconf/utils/: __init__.py
