[metadata]
name = upsilonconf
version = attr: upsilonconf.__version__
description = A simple configuration library
long_description = file: README.md
long_description_content_type = text/markdown
author = Pieter-Jan Hoedt
author_email = hoedt@ml.jku.at
url = https://github.com/hoedt/upsilonconf
project_urls =
    Bug Tracker = https://github.com/hoedt/upsilonconf/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Utilities
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires >= 3.6
packages =
    upsilonconf
    upsilonconf.io

[options.extras_require]
YAML =
    pyyaml>=5.4.1